# C-Sugar-Lambda

./: .gitignore  CMakeLists.txt  Create_Lambdas.py  Generate_C_Lambdas.py  Generate_Files.py  Lambda.h
Test/: Test_File.h
